--- a/Project-Fake-News(Machine-Learning).ipynb
+++ b/Project-Fake-News(Machine-Learning).ipynb
@@ -77,7 +77,7 @@
         "import string\n",
         "import numpy as np\n",
         "\n",
-        "df = pd.read_csv(\"statements3.csv\",index_col=\"Index\")"
+        "df = pd.read_csv(\"statements.csv\",index_col=\"Index\")"
       ]
     },
     {
